--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Tinhtoo
+          <span class="text-primary">Hlaing</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">No.18 West Horse Race Road.Tamwe;Ph:9971052201·
+          <a href="mailto:name@email.com">tinhtoo1876@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/tinhtoohlaing/">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/tinhtoo.hlaing.10">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
